Exams/exam_19.02.05/4-0-check_mate/4-0-check_mate.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z4r6p19.42.us.org
Darwin 17.5.0 x86_64
$> date
Tue Feb  5 10:57:15 PST 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.5.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.5.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190205/ititkov

= Git history ==================================================================
$> git -C /var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user log --pretty='%H - %an, %ad : %s'
4b0d91380f36e1f5e10421bb538d223d1f56d1bf - Exam 42, Tue Feb 5 10:57:03 2019 -0800 : check_mate
b6a4f599a7a714a375b362647b21052fd136fcd7 - Exam 42, Tue Feb 5 10:38:00 2019 -0800 : expand_str
2f48c61d402f46e45aab3edcbb899f2eef9193ed - Exam 42, Tue Feb 5 10:06:27 2019 -0800 : union
994153e696139be6d1d1b6d6980c70256e89f939 - Exam 42, Tue Feb 5 09:34:15 2019 -0800 : repeat_alpha
4c1d65954ce5474ff41fe296883fdc0851f1e322 - Exam 42, Tue Feb 5 09:16:01 2019 -0800 : aff_a
 
= Collected files ==========================================
$> ls -lAR /var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user
total 8
-rw-r--r--  1 deepthought  deepthought  1273 Feb  5 10:57 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Feb  5 10:57 aff_a
drwxr-xr-x  4 deepthought  deepthought   136 Feb  5 10:57 check_mate
drwxr-xr-x  3 deepthought  deepthought   102 Feb  5 10:57 expand_str
drwxr-xr-x  3 deepthought  deepthought   102 Feb  5 10:57 repeat_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Feb  5 10:57 union

/var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user/aff_a:
total 8
-rw-r--r--  1 deepthought  deepthought  1175 Feb  5 10:57 aff_a.c

/var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user/check_mate:
total 16
-rw-r--r--  1 deepthought  deepthought  1007 Feb  5 10:57 check_mate.c
-rw-r--r--  1 deepthought  deepthought  1004 Feb  5 10:57 ft_list.h

/var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user/expand_str:
total 8
-rw-r--r--  1 deepthought  deepthought  1696 Feb  5 10:57 expand_str.c

/var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user/repeat_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1287 Feb  5 10:57 repeat_alpha.c

/var/folders/dn/58scyw1n4bb22rntx4ljrq580000gp/T/tmpm2H90S/user/union:
total 8
-rw-r--r--  1 deepthought  deepthought  1578 Feb  5 10:57 union.c
 
= check_mate ===================================================================
$> gcc -Wextra -Wall -Werror check_mate.c -o user_exe 
In file included from check_mate.c:15:
./ft_list.h:16:12: error: type specifier missing, defaults to 'int' [-Werror,-Wimplicit-int]
typedef                         s_list
~~~~~~~                         ^
./ft_list.h:16:18: error: expected ';' after top level declarator
typedef                         s_list
                                      ^
                                      ;
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
